Second Push hero section

--- a/index.html
+++ b/index.html
@@ -16,11 +16,32 @@
     <nav class="navbar">
       <div class="nav-left">
         <h1>TechnoFest</h1>
-        <p>Article</p>
+        <p>Articles</p>
       </div>
       <div class="nav-right">
-        <button class="nav-register">Register</button>
+        <button class="btn-register secondary">Register</button>
       </div>
     </nav>
+
+    <section class="hero">
+      <div class="left-hero">
+        <h1>TECHNO FEST 2024</h1>
+        <p>
+          In the wilderness, they explored uncharted paths, fueling a friendly
+          competition as they raced for treasures, their bonds strengthening
+          with every challenge overcome.
+        </p>
+        <input type="text" placeholder="Enter your work email" />
+        <div class="getstarted"></div>
+        <button>Get Started</button>
+        <p>FREE FOREVER IF STUDENT</p>
+        <div class="stars">
+
+        </div>
+      </div>
+      <div class="right-hero">
+        <img src="./assests/art-00.jpg" alt="">
+      </div>
+    </section>
   </body>
 </html>
