--- a/index.html
+++ b/index.html
@@ -3,45 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Techno Fest 2024</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="discover">
-      <p class="discover-text secondary">
-        A gleam of excitement, declare,"Adventure awaits! Let's chase it down!
-      </p>
-      <button class="discover-button secondary">Discover</button>
-    </div>
-    <nav class="navbar">
-      <div class="nav-left">
-        <h1>TechnoFest</h1>
-        <p>Articles</p>
-      </div>
-      <div class="nav-right">
-        <button class="btn-register secondary">Register</button>
-      </div>
-    </nav>
-
-    <section class="hero">
-      <div class="left-hero">
-        <h1>TECHNO FEST 2024</h1>
-        <p>
-          In the wilderness, they explored uncharted paths, fueling a friendly
-          competition as they raced for treasures, their bonds strengthening
-          with every challenge overcome.
+    <div class="top-bar">
+      <div class="discover">
+        <p class="discover-text">
+          A gleam of excitement, declare,"Adventure awaits! Let's chase it down!
         </p>
-        <input type="text" placeholder="Enter your work email" />
-        <div class="getstarted"></div>
-        <button>Get Started</button>
-        <p>FREE FOREVER IF STUDENT</p>
-        <div class="stars">
+        <button class="discover-button">Discover</button>
+      </div>
+      <nav class="navbar">
+        <div class="nav-left">
+          <h1>TechnoFest</h1>
+          <p>Articles</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            viewBox="0 0 24 24"
+            aria-hidden="true"
+            focusable="false"
+          >
+            <path
+              d="M6 9l6 6 6-6"
+              fill="none"
+              stroke="currentColor"
+              8
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </div>
+        <div class="nav-right">
+          <button class="btn-register">Register</button>
+        </div>
+      </nav>
+    </div>
 
+    <section class="hero-section">
+      <div class="left-hero">
+        <div class="left-hero-content">
+          <h1>TECHNO FEST 2024</h1>
+          <p>
+            In the wilderness, they explored uncharted paths, fueling a friendly
+            competition as they raced for treasures, their bonds strengthening
+            with every challenge overcome
+          </p>
+          <input type="text" placeholder="Enter your work email" />
+          <div class="get-started">
+            <button>Get Started</button>
+            <p>FREE FOREVER<br>IF STUDENT</p>
+          </div>
+          <div class="stars">
+            <div class="stars-image">
+              <img src="./assests/icon-00.png" alt="">
+              <img src="./assests/icon-00.png" alt="">
+              <img src="./assests/icon-00.png" alt="">
+              <img src="./assests/icon-00.png" alt="">
+              <img src="./assests/icon-00.png" alt="">
+            </div>
+            <p>Based on 10,000+ reviews on</p>
+          </div>
         </div>
       </div>
       <div class="right-hero">
-        <img src="./assests/art-00.jpg" alt="">
+        <img src="./assests/art-00.jpg" alt="" />
       </div>
+    </section>
+
+    <section class="sponsors">
+      <img src="./assests/section-ibm.png" alt="">
+      <img src="./assests/section-logitech.png" alt="">
+      <img src="./assests/section-tibc.png" alt="">
     </section>
   </body>
 </html>
