Featured Speaker Section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="top-bar">
       <div class="discover">
         <p class="discover-text">
-          A gleam of excitement, declare,"Adventure awaits! Let's chase it down!
+          A gleam of excitement, declare, "Adventure awaits! Let's chase it
+          down!
         </p>
         <button class="discover-button">Discover</button>
       </div>
@@ -55,15 +56,15 @@
           <input type="text" placeholder="Enter your work email" />
           <div class="get-started">
             <button>Get Started</button>
-            <p>FREE FOREVER<br>IF STUDENT</p>
+            <p>FREE FOREVER<br />IF STUDENT</p>
           </div>
           <div class="stars">
             <div class="stars-image">
-              <img src="./assests/icon-00.png" alt="">
-              <img src="./assests/icon-00.png" alt="">
-              <img src="./assests/icon-00.png" alt="">
-              <img src="./assests/icon-00.png" alt="">
-              <img src="./assests/icon-00.png" alt="">
+              <img src="./assests/icon-00.png" alt="" />
+              <img src="./assests/icon-00.png" alt="" />
+              <img src="./assests/icon-00.png" alt="" />
+              <img src="./assests/icon-00.png" alt="" />
+              <img src="./assests/icon-00.png" alt="" />
             </div>
             <p>Based on 10,000+ reviews on</p>
           </div>
@@ -75,9 +76,79 @@
     </section>
 
     <section class="sponsors">
-      <img src="./assests/section-ibm.png" alt="">
-      <img src="./assests/section-logitech.png" alt="">
-      <img src="./assests/section-tibc.png" alt="">
+      <img src="./assests/section-ibm.png" alt="" />
+      <img src="./assests/section-logitech.png" alt="" />
+      <img src="./assests/section-tibc.png" alt="" />
+    </section>
+
+    <section class="featured-speakers">
+      <h1>Featured Speakers</h1>
+      <div class="speakers-container">
+        <div class="speaker-card">
+          <img src="./assests/quasim-ashraf.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Quasim Ashraf</h1>
+            <p class="speaker-position">Head of Operations</p>
+            <p class="speaker-handle">@ <strong>Ashraf</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/shipra-kayan.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Shipra Kayan</h1>
+            <p class="speaker-position">Lead Project Manager</p>
+            <p class="speaker-handle">@ <strong>Kayan</strong> </p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/lynn-browning.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Lynn Browning</h1>
+            <p class="speaker-position">Director,<br>Project Management</p>
+            <p class="speaker-handle">@ <strong>Browning</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/molly-quella.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Molly Quella</h1>
+            <p class="speaker-position">Project Manager,<br>Planning</p>
+            <p class="speaker-handle">@ <strong>Quella</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/tyler-tolson.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Tyler Tolson</h1>
+            <p class="speaker-position">Project Manager, Business</p>
+            <p class="speaker-handle">@ <strong>Tolson</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/zel-crampton.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Zel Crampton</h1>
+            <p class="speaker-position">Manager</p>
+            <p class="speaker-handle">@ <strong>Crampton</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/maggie-davis.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Maggie Davis</h1>
+            <p class="speaker-position">VP</p>
+            <p class="speaker-handle">@ <strong>Davis</strong></p>
+          </div>
+        </div>
+        <div class="speaker-card">
+          <img src="./assests/mandy-mekhail.jpg" alt="" />
+          <div class="speaker-description">
+            <h1>Mandy Mekhail</h1>
+            <p class="speaker-position">Director of Talent Development</p>
+            <p class="speaker-handle">@ <strong>ClickUp</strong></p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
