Added Agenda Section

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
           <div class="speaker-description">
             <h1>Shipra Kayan</h1>
             <p class="speaker-position">Lead Project Manager</p>
-            <p class="speaker-handle">@ <strong>Kayan</strong> </p>
+            <p class="speaker-handle">@ <strong>Kayan</strong></p>
           </div>
         </div>
         <div class="speaker-card">
           <img src="./assests/lynn-browning.jpg" alt="" />
           <div class="speaker-description">
             <h1>Lynn Browning</h1>
-            <p class="speaker-position">Director,<br>Project Management</p>
+            <p class="speaker-position">Director,<br />Project Management</p>
             <p class="speaker-handle">@ <strong>Browning</strong></p>
           </div>
         </div>
@@ -112,7 +112,7 @@
           <img src="./assests/molly-quella.jpg" alt="" />
           <div class="speaker-description">
             <h1>Molly Quella</h1>
-            <p class="speaker-position">Project Manager,<br>Planning</p>
+            <p class="speaker-position">Project Manager,<br />Planning</p>
             <p class="speaker-handle">@ <strong>Quella</strong></p>
           </div>
         </div>
@@ -147,6 +147,68 @@
             <p class="speaker-position">Director of Talent Development</p>
             <p class="speaker-handle">@ <strong>ClickUp</strong></p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="agenda">
+      <h1 class="agenda-title">Agenda</h1>
+
+      <div class="agenda-card">
+        <div class="card-info">
+          <h3 class="card-title">Opening Statements</h3>
+          <p class="card-speaker">
+            <strong>Quasim Ashraf</strong>, Head of Operations
+          </p>
+        </div>
+        <div class="card-images">
+          <img src="./assests/quasim-ashraf.jpg" alt="" />
+        </div>
+      </div>
+
+      <div class="agenda-card">
+        <div class="card-info">
+          <h3 class="card-title">
+            Techno Fest 2024 - "TechTrek: Explore,<br />
+            Compete, Connect"
+          </h3>
+          <p class="card-speaker">
+            <strong>Shipra Kayan</strong>, Lead Project Manager
+          </p>
+          <p class="card-speaker">
+            <strong>Lynn Browning</strong>, Director, Project Management
+          </p>
+          <p class="card-speaker">
+            <strong>Molly Quella</strong>, Project Manager, Planning
+          </p>
+          <p class="card-speaker">
+            <strong>Tyler Tolson</strong>, Project Manager, Business
+          </p>
+        </div>
+        <div class="card-images">
+          <img src="./assests/shipra-kayan.jpg" alt="" />
+          <img src="./assests/lynn-browning.jpg" alt="" />
+          <img src="./assests/molly-quella.jpg" alt="" />
+          <img src="./assests/tyler-tolson.jpg" alt="" />
+        </div>
+      </div>
+
+      <div class="agenda-card">
+        <div class="card-info">
+          <h3 class="card-title">
+            Bringing It All Together: Work Management Efficiency Secrets for
+            Multiple Projects & Teams
+          </h3>
+          <p class="card-speaker"><strong>Zel Crampton</strong>, Manager</p>
+          <p class="card-speaker"><strong>Maggie Davis</strong>, VP</p>
+          <p class="card-speaker">
+            <strong>Mandy Mekhail</strong>, Director of Talent Development
+          </p>
+        </div>
+        <div class="card-images-3">
+          <img src="./assests/zel-crampton.jpg" alt="" />
+          <img src="./assests/maggie-davis.jpg" alt="" />
+          <img src="./assests/mandy-mekhail.jpg" alt="" />
         </div>
       </div>
     </section>
