Added Articles Sections

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <nav class="navbar">
         <div class="nav-left">
           <h1>TechnoFest</h1>
-          <p>Articles</p>
+          <a href="#articles">Articles</a>
+
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="18"
@@ -209,6 +210,89 @@
           <img src="./assests/zel-crampton.jpg" alt="" />
           <img src="./assests/maggie-davis.jpg" alt="" />
           <img src="./assests/mandy-mekhail.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="articles" id="articles">
+      <h1 class="article-title">Articles</h1>
+
+      <div class="article-container">
+        <div class="article-cards">
+          <div class="article-info">
+            <div class="article-image">
+              <img src="./assests/article-preview-01.jpg" alt="" />
+            </div>
+            <h3 class="article-card-title">
+              International Research Conference on Information Technology
+              Education (iRCITE) 2023
+            </h3>
+
+            <div class="article-author">
+              <div class="avatar">
+                <img src="./assests/erica-golightly.jpg" alt="" />
+              </div>
+              <div class="info">
+                <p class="author-name"><strong>Erica Golightly</strong></p>
+                <p class="author-position">Board Member</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="read-more">
+            <p>Read More <span>-></span></p>
+          </div>
+        </div>
+
+        <div class="article-cards">
+          <div class="article-info">
+            <div class="article-image">
+              <img src="./assests/article-preview-01.jpg" alt="" />
+            </div>
+            <h3 class="article-card-title-2">
+              Regional Assembly on Information Technology Education (RAITE) 2023
+            </h3>
+
+            <div class="article-author">
+              <div class="avatar">
+                <img src="./assests/greg-swan.jpg" alt="" />
+              </div>
+              <div class="info">
+                <p class="author-name"><strong>Greg Swan</strong></p>
+                <p class="author-position">Content Manager</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="read-more">
+            <p>Read More <span>-></span></p>
+          </div>
+        </div>
+
+        <div class="article-cards">
+          <div class="article-info">
+            <div class="article-image">
+              <img src="./assests/article-preview-01.jpg" alt="" />
+            </div>
+            <h3 class="article-card-title">
+              International Research Conference on Information Technology
+              Education (iRCITE) 2024
+            </h3>
+
+            <div class="article-author">
+              <div class="avatar">
+                <img src="./assests/erica-golightly.jpg" alt="" />
+              </div>
+              <div class="info">
+                <p class="author-name"><strong>Holly Peck</strong></p>
+                <p class="author-position">Board Member</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="read-more">
+            <p>Read More <span>-></span></p>
+          </div>
         </div>
       </div>
     </section>
