Added Footer Links

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="article-cards">
           <div class="article-info">
             <div class="article-image">
-              <img src="./assests/article-preview-01.jpg" alt="" />
+              <img src="./assests/article-preview-02.jpg" alt="" />
             </div>
             <h3 class="article-card-title-2">
               Regional Assembly on Information Technology Education (RAITE) 2023
@@ -272,7 +272,7 @@
         <div class="article-cards">
           <div class="article-info">
             <div class="article-image">
-              <img src="./assests/article-preview-01.jpg" alt="" />
+              <img src="./assests/article-preview-03.jpg" alt="" />
             </div>
             <h3 class="article-card-title">
               International Research Conference on Information Technology
@@ -296,5 +296,50 @@
         </div>
       </div>
     </section>
+    <section class="sponsors">
+      <img src="./assests/section-ibm.png" alt="" />
+      <img src="./assests/section-logitech.png" alt="" />
+      <img src="./assests/section-tibc.png" alt="" />
+    </section>
+
+    <footer class="footer-section">
+      <div class="footer-links">
+        <div class="links-one">
+          <p class="link-main">Technofest</p>
+          <p class="link">Download</p>
+          <p class="link">About Us</p>
+          <p class="link">Community</p>
+          <p class="link">Customers</p>
+        </div>
+
+        <div class="links-two">
+          <p class="link-main">Articles</p>
+          <p class="link">Help Docs</p>
+          <p class="link">On-Demand Demo</p>
+          <p class="link">ClickUp University</p>
+          <p class="link">Webinars</p>
+        </div>
+
+        <div class="links-three">
+          <p class="link">Gantt Chart</p>
+          <p class="link">Dashboards</p>
+          <p class="link">Native Time Tracking</p>
+          <p class="link">Mind Maps</p>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="footer-bottom-left">
+        <h1>TechnoFest</h1>
+        <p>© 2024 TechnoFest |Security | Your Privacy | Terms</p>
+        </div>
+        <div class="footer-bottom-right">
+          <img src="./assests/icon-01.png" alt="">
+          <img src="./assests/icon-02.png" alt="">
+          <img src="./assests/icon-03.png" alt="">
+          <img src="./assests/icon-04.png" alt="">
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
